<?xml version="1.0"?>
<package>
  <name>innok_heros_control</name>
  <version>1.0.3</version>
  <description>package to control the Innok Heros with several devices (e. g. joystick and keyboard)</description>

  <maintainer email="sh@innok-robotics.de">Sabrina Heerklotz</maintainer>
  <author email="jh@innok-robotics.de">Jonathan Hechtbauer</author>

  <url type="website">http://wiki.ros.org/Robots/Innok-Heros</url>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>innok_heros_description</run_depend>
  <run_depend>innok_heros_gazebo</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>twist_mux</run_depend>
</package>
